--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ cmake_minimum_required(VERSION 3.16)
 project(zenoh-cpp-example)
 
 find_package(spdlog REQUIRED)
+find_package(Boost REQUIRED)
 
 include(FetchContent)
 
@@ -17,5 +18,5 @@ target_link_libraries(pub PRIVATE zenohcxx::zenohc::lib)
 target_compile_features(pub PRIVATE cxx_std_17)
 
 add_executable(sub sub.cxx)
-target_link_libraries(sub PRIVATE zenohcxx::zenohc::lib spdlog::spdlog)
+target_link_libraries(sub PRIVATE zenohcxx::zenohc::lib spdlog::spdlog Boost::boost)
 target_compile_features(sub PRIVATE cxx_std_17)
